# ally-motion-evdev

./: .gitignore  CMakeLists.txt  README.md  argpopt.h  iio-uinput  iioaccell.cpp  iiogyro.cpp  iiogyro.h  main.cpp  uinputdev.cpp  uinputdev.h
